--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+
+    <color name="white">#ffffff</color>
+    <!--下划线背景色-->
+    <color name="under_line">#E0E0E0</color>
+
+    <color name="text_font_gray">#999999</color>
+    <color name="text_font_deep">#423B4D</color>
 </resources>
